--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,14 +5,16 @@
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-scripts": "2.1.0"
-  
+    "react-scripts": "2.1.0",
+    "homepage": "http://julieores.github.io/Clicky-Game/my-app"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "git-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -22,10 +24,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-
-  "homepage" : 
-    "http://julieores.github.io/Click-Game/my-app"
-  
-
+  ]
 }
